syntax = "proto3";

package example;

message Contracts {
  repeated Contract contracts = 1;
}

message Contract {
  string address = 1;
  uint64 blockNumber = 2;
  string timestamp = 3;
  uint64 ordinal = 4;
}

message BlobTransactions {
  repeated BlobTransaction transactions = 1;
}

message BlobTransaction {
  string hash = 1;
  uint64 block_number = 2;
  string timestamp = 3;
  uint64 blob_gas_used = 4;
}
